--- a/proceedings/lh2019.bib
+++ b/proceedings/lh2019.bib
@@ -1,6 +1,109 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
+@article{Aad:2019onw,
+      author         = "Aad, Georges and others",
+      title          = "{Properties of jet fragmentation using charged particles
+                        measured with the ATLAS detector in $pp$ collisions at
+                        $\sqrt{s}=13$ TeV}",
+      collaboration  = "ATLAS",
+      journal        = "Phys. Rev.",
+      volume         = "D100",
+      year           = "2019",
+      number         = "5",
+      pages          = "052011",
+      doi            = "10.1103/PhysRevD.100.052011",
+      eprint         = "1906.09254",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-EP-2019-090",
+      SLACcitation   = "%%CITATION = ARXIV:1906.09254;%%"
+}
+
+@article{Komiske:2018vkc,
+      author         = "Komiske, Patrick T. and Metodiev, Eric M. and Thaler,
+                        Jesse",
+      title          = "{An operational definition of quark and gluon jets}",
+      journal        = "JHEP",
+      volume         = "11",
+      year           = "2018",
+      pages          = "059",
+      doi            = "10.1007/JHEP11(2018)059",
+      eprint         = "1809.01140",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "MIT-CTP 5042",
+      SLACcitation   = "%%CITATION = ARXIV:1809.01140;%%"
+}
+
+@article{Metodiev:2018ftz,
+      author         = "Metodiev, Eric M. and Thaler, Jesse",
+      title          = "{Jet Topics: Disentangling Quarks and Gluons at
+                        Colliders}",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "120",
+      year           = "2018",
+      number         = "24",
+      pages          = "241602",
+      doi            = "10.1103/PhysRevLett.120.241602",
+      eprint         = "1802.00008",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "MIT-CTP-4979",
+      SLACcitation   = "%%CITATION = ARXIV:1802.00008;%%"
+}
+
+
+
+
+@article{Czakon:2015owf,
+      author         = "Czakon, Michal and Heymes, David and Mitov, Alexander",
+      title          = "{High-precision differential predictions for top-quark
+                        pairs at the LHC}",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "116",
+      year           = "2016",
+      number         = "8",
+      pages          = "082003",
+      doi            = "10.1103/PhysRevLett.116.082003",
+      eprint         = "1511.00549",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CAVENDISH-HEP-15-10, TTK-15-34",
+      SLACcitation   = "%%CITATION = ARXIV:1511.00549;%%"
+}
+
+@article{Marzani:2019hun,
+      author         = "Marzani, Simone and Soyez, Gregory and Spannowsky,
+                        Michael",
+      title          = "{Looking inside jets: an introduction to jet substructure
+                        and boosted-object phenomenology}",
+      year           = "2019",
+      doi            = "10.1007/978-3-030-15709-8",
+      note           = "[Lect. Notes Phys.958,pp.(2019)]",
+      eprint         = "1901.10342",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1901.10342;%%"
+}
+
+@article{Currie:2016bfm,
+      author         = "Currie, J and Glover, E. W. N. and Pires, J",
+      title          = "{Next-to-Next-to Leading Order QCD Predictions for Single
+                        Jet Inclusive Production at the LHC}",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "118",
+      year           = "2017",
+      number         = "7",
+      pages          = "072002",
+      doi            = "10.1103/PhysRevLett.118.072002",
+      eprint         = "1611.01460",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "IPPP-16-110, MPP-2016-322",
+      SLACcitation   = "%%CITATION = ARXIV:1611.01460;%%"
+}
+
 @article{Komiske:2018cqr,
       author         = "Komiske, Patrick T. and Metodiev, Eric M. and Thaler,
                         Jesse",
